dia04i/apache-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: apache-ingress
  name: apache-ingress
  namespace: dia04i
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache-ingress
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: apache-ingress
    spec:
      containers:
      - image: httpd
        name: httpd
        ports:
        - containerPort: 80
        resources: {}
status: {}
