dia04i/nginx-limit.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-limit
  name: nginx-limit
  namespace: dia04i
spec:
  containers:
  - image: nginx
    name: nginx-limit
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
