dia04i/nginx-limitado.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-limitado
  name: nginx-limitado
  namespace: dia04i
spec:
  containers:
  - image: nginx
    name: nginx-limitado
    resources:
      limits:
        cpu: 0.5
        memory: 386Mi
      requests:
        cpu: 0.2
        memory: 300Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
