dia04i/fanout.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout
  namespace: dia04i
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: fanout.local.lab
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-ingress
            port:
              number: 80
      - path: /apache
        pathType: Prefix
        backend:
          service:
            name: apache-ingress
            port:
              number: 80
