dia04i/nginx-ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: nginx-ingress-teste
  namespace: dia04i
spec:
  ingressClassName: nginx
  rules:
  - host: nginx-teste.local.lab
    http:
      paths:
      - backend:
          service:
            name: nginx-ingress
            port:
              number: 80
        path: /
        pathType: Exact
  tls:
  - hosts:
    - nginx-teste.local.lab
    secretName: default-tls
status:
  loadBalancer: {}
