dia04i/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: nginx-ingress
  namespace: dia04i
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.local.lab
    http:
      paths:
      - backend:
          service:
            name: nginx-ingress
            port:
              number: 80
        path: /
        pathType: Exact
  tls:
  - hosts:
    - nginx.local.lab
    secretName: default-tls        
status:
  loadBalancer: {}
