dia04i/switch-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: switch-svc
  namespace: dia04i
spec:
  ingressClassName: nginx
  rules:
  - host: switch-nginx.local.lab
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-ingress
            port:
              number: 80
  - host: switch-apache.local.lab
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: apache-ingress
            port:
              number: 80
